Fixed bug with translation not showing for Spanish

--- a/app/styles/cover.scss
+++ b/app/styles/cover.scss
@@ -234,3 +234,7 @@ textarea {
     width: 700px;
   }
 }
+
+#translateNewDoc {
+  display: none;
+}
